Updated Background Screens
Changed Background screen color to textured gray.

--- a/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
+++ b/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="4bc-ca-tnv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C3012" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="4bc-ca-tnv">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -109,7 +109,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="eIs-c5-eak" firstAttribute="trailing" secondItem="aiu-4t-QDB" secondAttribute="trailing" type="default" id="48m-9o-qTS"/>
                                     <constraint firstItem="GV6-6e-d1W" firstAttribute="bottom" secondItem="aiu-4t-QDB" secondAttribute="bottom" type="default" id="AH6-jH-7FZ"/>
@@ -202,7 +202,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="oFT-qo-29h" firstAttribute="leading" secondItem="2Rd-DU-2E9" secondAttribute="leading" type="default" id="30F-Ep-U2m"/>
                                     <constraint firstItem="QPB-yu-Zpt" firstAttribute="leading" secondItem="rOn-gL-Lza" secondAttribute="leading" type="default" id="54U-i6-HuZ"/>
@@ -299,7 +299,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="2Un-4x-Qq4" firstAttribute="leading" secondItem="IUh-Hq-Kbv" secondAttribute="leading" type="default" id="5AX-ZC-FmD"/>
                                     <constraint firstItem="Mjj-do-Qlb" firstAttribute="leading" secondItem="IUh-Hq-Kbv" secondAttribute="leading" type="default" id="5TA-ek-aVe"/>
@@ -374,7 +374,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="Gpk-Lw-3pz" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" type="default" id="7Sh-1g-kdo"/>
                                     <constraint firstItem="Gpk-Lw-3pz" firstAttribute="trailing" secondItem="zhq-SV-7KX" secondAttribute="trailing" type="default" id="Ak5-Ky-MxH"/>
@@ -410,7 +410,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="ubS-Og-vmo" firstAttribute="top" secondItem="Ymd-2I-6Zw" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="0p3-0n-mqg"/>
                             <constraint firstAttribute="trailing" secondItem="Ymd-2I-6Zw" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="1Yd-rW-C09"/>
@@ -500,7 +500,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="RFM-mX-L3d" secondAttribute="bottom" constant="12" id="3PR-h0-Rcd"/>
