--- a/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
+++ b/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
@@ -547,14 +547,8 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gCa-i1-nCD">
-                                <items/>
-                            </toolbar>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b0v-fJ-IuT">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="329" id="95K-LX-5pu"/>
-                                </constraints>
                             </webView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xII-6s-hqd">
                                 <items>
@@ -572,10 +566,13 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="What Can We Cook?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" highlighted="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Pl-ll-aQP">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ynY-1s-MZY">
+                                <items/>
+                            </toolbar>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="What Can We Cook?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="boF-tS-9qO">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="c0m-Fk-Mya"/>
-                                    <constraint firstAttribute="height" constant="21" id="vI2-Fq-Rdv"/>
+                                    <constraint firstAttribute="width" constant="240" id="wWj-se-ge7"/>
+                                    <constraint firstAttribute="height" constant="21" id="wl3-Ao-kgX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="23"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -584,15 +581,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="gCa-i1-nCD" firstAttribute="leading" secondItem="uxF-iW-LLh" secondAttribute="leading" type="default" id="5jD-40-o9T"/>
-                            <constraint firstItem="gCa-i1-nCD" firstAttribute="top" secondItem="b0v-fJ-IuT" secondAttribute="bottom" type="default" id="7bw-Dq-Z2n"/>
-                            <constraint firstAttribute="bottom" secondItem="3Pl-ll-aQP" secondAttribute="bottom" constant="143" id="CPR-Z8-B4g"/>
+                            <constraint firstItem="boF-tS-9qO" firstAttribute="centerX" secondItem="ynY-1s-MZY" secondAttribute="centerX" type="default" id="2Hx-g3-LjL"/>
+                            <constraint firstAttribute="bottom" secondItem="boF-tS-9qO" secondAttribute="bottom" constant="12" id="DJF-yd-75c"/>
                             <constraint firstItem="b0v-fJ-IuT" firstAttribute="leading" secondItem="uxF-iW-LLh" secondAttribute="leading" type="default" id="Hqh-Yt-nGK"/>
+                            <constraint firstItem="ynY-1s-MZY" firstAttribute="bottom" secondItem="uxF-iW-LLh" secondAttribute="bottom" type="default" id="KY6-fI-0mm"/>
                             <constraint firstItem="b0v-fJ-IuT" firstAttribute="trailing" secondItem="uxF-iW-LLh" secondAttribute="trailing" type="default" id="Ph6-0O-JzX"/>
-                            <constraint firstItem="3Pl-ll-aQP" firstAttribute="centerX" secondItem="gCa-i1-nCD" secondAttribute="centerX" type="default" id="Wbt-OJ-kpI"/>
+                            <constraint firstItem="ynY-1s-MZY" firstAttribute="leading" secondItem="uxF-iW-LLh" secondAttribute="leading" type="default" id="R54-Ke-FnT"/>
                             <constraint firstItem="xII-6s-hqd" firstAttribute="trailing" secondItem="uxF-iW-LLh" secondAttribute="trailing" type="default" id="dox-Ra-ftd"/>
-                            <constraint firstItem="gCa-i1-nCD" firstAttribute="trailing" secondItem="uxF-iW-LLh" secondAttribute="trailing" type="default" id="eUh-n9-Bcw"/>
+                            <constraint firstItem="ynY-1s-MZY" firstAttribute="top" secondItem="b0v-fJ-IuT" secondAttribute="bottom" type="default" id="eP8-49-tci"/>
                             <constraint firstItem="xII-6s-hqd" firstAttribute="leading" secondItem="uxF-iW-LLh" secondAttribute="leading" type="default" id="fTN-4N-N8P"/>
+                            <constraint firstItem="boF-tS-9qO" firstAttribute="centerX" secondItem="b0v-fJ-IuT" secondAttribute="centerX" type="default" id="l41-RY-oPq"/>
                             <constraint firstItem="b0v-fJ-IuT" firstAttribute="top" secondItem="xII-6s-hqd" secondAttribute="bottom" type="default" id="nee-hv-zUt"/>
                             <constraint firstItem="xII-6s-hqd" firstAttribute="top" secondItem="uxF-iW-LLh" secondAttribute="top" type="default" id="p3M-My-ZVZ"/>
                         </constraints>
@@ -635,6 +633,9 @@
                             </label>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rr0-2p-LAk" customClass="thumbnailView">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="504" id="Rza-ks-CeH"/>
+                                </constraints>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" name="windowFrameColor" catalog="System" colorSpace="catalog"/>
@@ -643,9 +644,8 @@
                             <constraint firstItem="Rr0-2p-LAk" firstAttribute="leading" secondItem="NYf-eb-thV" secondAttribute="leading" type="default" id="7xJ-At-Qtp"/>
                             <constraint firstItem="gKh-sn-UVr" firstAttribute="bottom" secondItem="NYf-eb-thV" secondAttribute="bottom" type="default" id="AHb-vf-EZV"/>
                             <constraint firstItem="gKh-sn-UVr" firstAttribute="trailing" secondItem="NYf-eb-thV" secondAttribute="trailing" type="default" id="Caf-iM-QCk"/>
-                            <constraint firstItem="ish-cp-zS4" firstAttribute="centerX" secondItem="gKh-sn-UVr" secondAttribute="centerX" type="default" id="HlJ-VB-ks5"/>
-                            <constraint firstItem="Rr0-2p-LAk" firstAttribute="top" secondItem="NYf-eb-thV" secondAttribute="top" type="default" id="O8Y-xT-cro"/>
-                            <constraint firstItem="gKh-sn-UVr" firstAttribute="top" secondItem="Rr0-2p-LAk" secondAttribute="bottom" type="default" id="cJK-5Y-jNf"/>
+                            <constraint firstItem="ish-cp-zS4" firstAttribute="centerX" secondItem="gKh-sn-UVr" secondAttribute="centerX" type="default" id="Hdk-0o-zuz"/>
+                            <constraint firstItem="Rr0-2p-LAk" firstAttribute="top" secondItem="NYf-eb-thV" secondAttribute="top" constant="20" symbolic="YES" type="default" id="WIb-ZG-3r6"/>
                             <constraint firstItem="Rr0-2p-LAk" firstAttribute="trailing" secondItem="NYf-eb-thV" secondAttribute="trailing" type="default" id="p94-i7-wGW"/>
                             <constraint firstAttribute="bottom" secondItem="ish-cp-zS4" secondAttribute="bottom" constant="12" id="v4t-gE-xVX"/>
                         </constraints>
@@ -664,7 +664,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nhE-gD-YAG" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1991" y="1752"/>
+            <point key="canvasLocation" x="1991" y="1728"/>
         </scene>
         <!--View Controller - Web Screen-->
         <scene sceneID="ays-er-KJO">
@@ -1489,8 +1489,6 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <class className="EnterViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/EnterViewController.h"/>
             <relationships>
-                <relationship kind="action" name="checkSelected:" candidateClass="UIButton"/>
-                <relationship kind="action" name="textFieldDoneEditing:"/>
                 <relationship kind="outlet" name="txtIngredients" candidateClass="UITextField"/>
             </relationships>
         </class>
@@ -1541,7 +1539,6 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <class className="RatingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RatingViewController.h"/>
             <relationships>
-                <relationship kind="action" name="tapHideKeyBoard:"/>
                 <relationship kind="outlet" name="commentTextView" candidateClass="UITextView"/>
                 <relationship kind="outlet" name="starRatingView" candidateClass="RatingView"/>
             </relationships>
@@ -1565,7 +1562,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="aIc-V8-Hg6"/>
+        <segue reference="W4C-4i-mKN"/>
         <segue reference="1kH-GP-dN6"/>
     </inferredMetricsTieBreakers>
 </document>
