--- a/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
+++ b/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
@@ -631,11 +631,8 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rr0-2p-LAk" customClass="thumbnailView">
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rr0-2p-LAk">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="504" id="Rza-ks-CeH"/>
-                                </constraints>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" name="windowFrameColor" catalog="System" colorSpace="catalog"/>
@@ -645,9 +642,10 @@
                             <constraint firstItem="gKh-sn-UVr" firstAttribute="bottom" secondItem="NYf-eb-thV" secondAttribute="bottom" type="default" id="AHb-vf-EZV"/>
                             <constraint firstItem="gKh-sn-UVr" firstAttribute="trailing" secondItem="NYf-eb-thV" secondAttribute="trailing" type="default" id="Caf-iM-QCk"/>
                             <constraint firstItem="ish-cp-zS4" firstAttribute="centerX" secondItem="gKh-sn-UVr" secondAttribute="centerX" type="default" id="Hdk-0o-zuz"/>
-                            <constraint firstItem="Rr0-2p-LAk" firstAttribute="top" secondItem="NYf-eb-thV" secondAttribute="top" constant="20" symbolic="YES" type="default" id="WIb-ZG-3r6"/>
+                            <constraint firstItem="Rr0-2p-LAk" firstAttribute="top" secondItem="NYf-eb-thV" secondAttribute="top" type="default" id="Wae-Vc-CPs"/>
                             <constraint firstItem="Rr0-2p-LAk" firstAttribute="trailing" secondItem="NYf-eb-thV" secondAttribute="trailing" type="default" id="p94-i7-wGW"/>
-                            <constraint firstAttribute="bottom" secondItem="ish-cp-zS4" secondAttribute="bottom" constant="12" id="v4t-gE-xVX"/>
+                            <constraint firstAttribute="bottom" secondItem="ish-cp-zS4" secondAttribute="bottom" constant="12" id="s1r-uQ-b2s"/>
+                            <constraint firstItem="gKh-sn-UVr" firstAttribute="top" secondItem="Rr0-2p-LAk" secondAttribute="bottom" type="default" id="zUD-RI-6Vs"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="asP-T2-hQE">
@@ -659,12 +657,12 @@
                         <barButtonItem key="rightBarButtonItem" title="Start Over" id="r9M-IB-uUY"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="webView" destination="Rr0-2p-LAk" id="zdy-pf-gHr"/>
+                        <outlet property="thumbnailView" destination="Rr0-2p-LAk" id="Mjt-DD-n02"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nhE-gD-YAG" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1991" y="1728"/>
+            <point key="canvasLocation" x="1622" y="1701"/>
         </scene>
         <!--View Controller - Web Screen-->
         <scene sceneID="ays-er-KJO">
@@ -1539,6 +1537,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <class className="RatingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RatingViewController.h"/>
             <relationships>
+                <relationship kind="action" name="tapHideKeyBoard:"/>
                 <relationship kind="outlet" name="commentTextView" candidateClass="UITextView"/>
                 <relationship kind="outlet" name="starRatingView" candidateClass="RatingView"/>
             </relationships>
@@ -1562,7 +1561,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="W4C-4i-mKN"/>
+        <segue reference="Qcp-Xn-X94"/>
         <segue reference="1kH-GP-dN6"/>
     </inferredMetricsTieBreakers>
 </document>
