--- a/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
+++ b/WhatCanWeCook/WhatCanWeCook/en.lproj/MainStoryboard.storyboard
@@ -24,7 +24,7 @@
             <objects>
                 <viewController id="P2b-bC-zaB" customClass="EnterViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wQg-1M-WtZ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p9L-d6-ftf">
@@ -400,15 +400,15 @@
                                 <constraints>
                                     <constraint firstItem="NwC-14-yMC" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" type="default" id="07a-Jh-SGB"/>
                                     <constraint firstItem="Gpk-Lw-3pz" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" type="default" id="7Sh-1g-kdo"/>
-                                    <constraint firstItem="Gpk-Lw-3pz" firstAttribute="trailing" secondItem="zhq-SV-7KX" secondAttribute="trailing" type="default" id="Ak5-Ky-MxH"/>
+                                    <constraint firstItem="NwC-14-yMC" firstAttribute="top" secondItem="2JD-xQ-lQG" secondAttribute="top" type="default" id="E36-jX-z7K"/>
                                     <constraint firstItem="zhq-SV-7KX" firstAttribute="top" secondItem="ubS-Og-vmo" secondAttribute="top" constant="40" id="HFX-wD-Eeh"/>
                                     <constraint firstItem="mOD-He-cGz" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" constant="30" id="NH3-f8-tpg"/>
-                                    <constraint firstItem="Gpk-Lw-3pz" firstAttribute="top" secondItem="ubS-Og-vmo" secondAttribute="top" constant="70" id="PEz-bF-syR"/>
+                                    <constraint firstItem="NwC-14-yMC" firstAttribute="top" secondItem="ubS-Og-vmo" secondAttribute="top" constant="70" id="NTH-2G-va3"/>
                                     <constraint firstItem="NwC-14-yMC" firstAttribute="trailing" secondItem="Gpk-Lw-3pz" secondAttribute="trailing" type="default" id="Ql3-kj-lqD"/>
-                                    <constraint firstItem="Gpk-Lw-3pz" firstAttribute="top" secondItem="2JD-xQ-lQG" secondAttribute="top" type="default" id="UnY-cw-oK8"/>
                                     <constraint firstItem="2JD-xQ-lQG" firstAttribute="leading" secondItem="mOD-He-cGz" secondAttribute="leading" type="default" id="Z8O-3f-eCM"/>
                                     <constraint firstItem="OCD-GN-2X4" firstAttribute="top" secondItem="ubS-Og-vmo" secondAttribute="top" constant="10" id="bJP-Ka-sIn"/>
-                                    <constraint firstAttribute="bottom" secondItem="NwC-14-yMC" secondAttribute="bottom" constant="73" id="dvD-WI-dSo"/>
+                                    <constraint firstItem="Gpk-Lw-3pz" firstAttribute="top" secondItem="NwC-14-yMC" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="dW1-KS-gGk"/>
+                                    <constraint firstItem="NwC-14-yMC" firstAttribute="trailing" secondItem="zhq-SV-7KX" secondAttribute="trailing" type="default" id="gHw-KR-SNM"/>
                                     <constraint firstItem="zhq-SV-7KX" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" type="default" id="gmZ-4E-rN8"/>
                                     <constraint firstItem="J07-fH-bbi" firstAttribute="leading" secondItem="2JD-xQ-lQG" secondAttribute="leading" type="default" id="kNe-h3-ZVx"/>
                                     <constraint firstItem="OCD-GN-2X4" firstAttribute="leading" secondItem="ubS-Og-vmo" secondAttribute="leading" type="default" id="lEs-35-EwQ"/>
@@ -1074,7 +1074,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
             <objects>
                 <tableViewController id="3Cg-C8-Kgf" customClass="Psample" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ZtC-4d-lPg">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <sections>
@@ -1576,8 +1576,6 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <class className="EnterViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/EnterViewController.h"/>
             <relationships>
-                <relationship kind="action" name="checkSelected:" candidateClass="UIButton"/>
-                <relationship kind="action" name="textFieldDoneEditing:"/>
                 <relationship kind="outlet" name="txtIngredients" candidateClass="UITextField"/>
             </relationships>
         </class>
@@ -1628,7 +1626,6 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <class className="RatingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RatingViewController.h"/>
             <relationships>
-                <relationship kind="action" name="tapHideKeyBoard:"/>
                 <relationship kind="outlet" name="commentTextView" candidateClass="UITextView"/>
                 <relationship kind="outlet" name="starRatingView" candidateClass="RatingView"/>
             </relationships>
@@ -1652,7 +1649,7 @@ Read more at: http://www.foodnetwork.com/recipes/melissa-darabian/grilled-chicke
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="aIc-V8-Hg6"/>
-        <segue reference="1kH-GP-dN6"/>
+        <segue reference="Qcp-Xn-X94"/>
+        <segue reference="CNy-yC-BCj"/>
     </inferredMetricsTieBreakers>
 </document>
